from enum import Enum


class TipoPagamento(Enum):
    BOLETO = "BOLETO"
    CARTAO = "CARTAO"
    PIX = "PIX"
