from enum import Enum


class TipoPassageiro(Enum):
    ADULTO = "ADULTO"
    CRIANCA = "CRIANCA"
    IDOSO = "IDOSO"
